--- a/src/styles/_category.scss
+++ b/src/styles/_category.scss
@@ -1,8 +1,30 @@
 .category{
     &__card{
+        position: relative;
         display: block;
         border-radius: 2px;
         border: 4px solid #8EACCD;
         margin: 10px 0px 5px 0px;
+        width: 350px;
+        height: 200px; 
+        overflow: hidden; 
+    }
+    &__text{
+        position: absolute;
+        font-size: 30px;
+        color: white;
+        font-weight: bold;
+        -webkit-text-stroke: 1px black; 
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    &__image{
+        position: absolute;
+        content: "";
+        width: 100%;
+        top:0px;
+        z-index: -1;
+        filter: blur(4px);
     }
 }
