--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	padding: 0 10px;
 	background-color: #113946;
+	padding-bottom: 10px;
 	// --------------------------------------
 	&__category {
 		position: relative;
