--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "main";
 @import "products";
+@import "product_page";
 @import "category";
 @import "navbar";
