--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -46,6 +46,7 @@
 		height: 100%;
 		background-color: gray;
 		border-radius: 5px;
+		padding: 2px;
 	}
 	// --------------------------------------
 	&__account {
