--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -3,7 +3,7 @@
     .card{
         display: block;
         border-radius: 5px ;
-        background-color: gray;
+        background-color: $third-color;
         &__details{
             margin: 5px;
         }
