--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "colors";
+@import "buttons";
 @import "main";
 @import "products";
 @import "product_page";
