--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -1,6 +1,6 @@
-.products{
-
-    .card{
+.product{
+    background-color: $main-color;
+    .description{
         display: block;
         border-radius: 5px ;
         background-color: $third-color;
