Added remove one from card

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -10,7 +10,10 @@
         background-color: $second-color;
     }
     &__clear{
-        
+        background-color: red;
+    } 
+    &__delete{
+        background-color: red;
     }
     &__close{
         
