--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -32,6 +32,7 @@
 		background-color: $third-color;
 		border-radius: 5px;
 		padding: 2px;
+        margin: 0px;
         &:hover{
             background-color: $main-color;
             color: $second-color;
