--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 @import "colors";
 @import "buttons";
 @import "main";
+@import "carousel";
 @import "products";
 @import "product_page";
 @import "category";
