--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -1,15 +1,49 @@
 .carousel {
-    display: flex;
-    overflow: hidden;
+    position: relative;
     width: 100%;
-    &:active{
-        transform: translateX(0);
-    }
-    &__img{
-        width: 100%;
+    max-height: 500px;
+    overflow: hidden;
+    margin: 0 auto;
+    &__slides {
+        display: flex;
         transition: transform 0.5s ease;
-        &:not(.active){
-            transform: translateX(-100%);
+    }
+
+    &__slides > div {
+        flex: 1 0 100%;
+        width: 100%;
+        height: 500px;
+        transition: transform 0.5s ease; 
+        &.active {
+            transform: translateX(0);
+        }
+
+        &:not(.active) {
+            transform: translateX(100%);
         }
     }
-  }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__buttons {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .prev,
+    .next {
+        background-color: #333;
+        color: white;
+        padding: 10px;
+        border: none;
+        cursor: pointer;
+    }
+}
