--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -1,15 +1,20 @@
 .cart-count{
     
-    padding: 0px 25px 0px 25px;
-    position: absolute;
-    top: 70px;
-    right: 0px;
-    width:fit-content;
-    background-color: $third-color;
-    border-radius: 0px 0px 0px 15px;
-    border-left: 2px solid;
-    border-bottom: 2px solid;
-    border-color: $second-color;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+    &__content{
+        background: $third-color;
+        padding: 20px;
+        border-radius: 5px;
+    }
     &__article{
         
     }
