Edited styles for product

--- a/src/styles/_product_page.scss
+++ b/src/styles/_product_page.scss
@@ -36,7 +36,7 @@ input {
 
 .catalog {
   padding: 100px 20px 100px 20px;
-  background-color: #f0ffff;
+  //background-color: #f0ffff;
   .btn {
     display: block;
     color: white;
