--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,10 +1,11 @@
 .header {
-	
+
 	display: flex;
 	align-items: center;
 	padding: 0 10px;
 	background-color: $second-color;
 	padding-bottom: 10px;
+	justify-content: space-between;
 	&__logo{
 		position: relative;
 		margin-right: 5px;
