--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,9 +1,19 @@
 .header {
-
-	display: flex;
-	align-items: center;
+	position: absolute;
 	padding: 0 10px;
-	justify-content: space-between;
+	z-index: 10;
+
+	&__parent{
+		position: fixed;
+		top: 0;
+		left: 0;
+		padding: 10px;
+		width: 100%;
+	}
+	&__navbar{
+		display: flex;
+		justify-content: space-between;
+	}
 	&__logo{
 		position: relative;
 		margin-right: 5px;
@@ -53,5 +63,9 @@
 		border: none;
 		background-color: $third-color;
 		color: #fff;
+	}
+	.scrolled{
+		transition: background-color 1s ease;
+		background: rgba(0, 0, 0, 0.5);
 	}
 }
