--- a/src/styles/_mainpage.scss
+++ b/src/styles/_mainpage.scss
@@ -4,15 +4,16 @@
     width: 100%;
     height: auto;
     display: block;
+    border-radius: 0px 0px 30px 30px ;
   }
   &__article{
     position: absolute;
-    top: 80%;
+    top: 60%;
     left: 1%;
     transform: translate(0%, -50%);
     text-align: left;
     h1{
-      font-size: 100px;
+      font-size: 200px;
       color: white;
     }
   }
