--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,6 +1,12 @@
 body{
 
 }
+ul{
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style: none;
+}
 .row{
     margin: 0px;
 }
