--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -1,9 +1,10 @@
 .carousel {
     position: relative;
-    width: 100%;
+    width: 500px;
     max-height: 500px;
     overflow: hidden;
-    margin: 0 auto;
+    border-radius: 30px;
+    border: 1px solid $second-color;
     &__slides {
         display: flex;
         transition: transform 0.5s ease;
