Added Proposal page

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -12,7 +12,7 @@
 	}
 	&__navbar{
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 	}
 	&__logo{
 		position: relative;
