--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -38,11 +38,11 @@
         }
     }
     &__navbar{
-        background-color: rgba(76, 175, 80, 0);
-        color: $main-color;
+        background-color: $main-color;  //rgba(76, 175, 80, 0);
+        color: $second-color;
         border-radius: 50px;
         padding: 5px 20px;
-        border: 1px solid $main-color ;
+        border: 1px solid $second-color; ;
         &:hover{
             background-color: $main-color;
             color: $second-color;
@@ -50,6 +50,7 @@
             padding: 5px 20px;
             border: 1px solid $main-color ;
         }
+
     }
     &__cart {
 		width: 100%;
