--- a/src/styles/_mainpage.scss
+++ b/src/styles/_mainpage.scss
@@ -15,6 +15,9 @@
     h1{
       font-size: 170px;
       color: white;
+      @media screen and (max-width: 768px) {
+        font-size: large;
+      }
     }
   }
 }
