Edited styles for navbar and other #2

--- a/src/styles/_mainpage.scss
+++ b/src/styles/_mainpage.scss
@@ -16,7 +16,7 @@
       font-size: 170px;
       color: white;
       @media screen and (max-width: 768px) {
-        font-size: large;
+        font-size: xx-large;
       }
     }
   }
