--- a/src/styles/_product_page.scss
+++ b/src/styles/_product_page.scss
@@ -1,5 +1,8 @@
 .product-page{
   margin-top: 200px;
+  @media screen and (max-width: 768px) {
+    margin-top: 50px;
+  }
   &__img{
     display: block;
     max-width: 100%;
