Added styles for product page mobile

--- a/src/styles/_product_page.scss
+++ b/src/styles/_product_page.scss
@@ -17,6 +17,10 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 100px 120px;
+    @media screen and (max-width: 768px) {
+      display: block;
+      padding: 30px;
+    }
   }
   &__article{
     width: 250px;
