--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -1,13 +1,34 @@
 .product{
     margin-top: 100px;
-
+    &__content{
+        display: flex;
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
+    }
+    &__carousel{
+        width: 700px;
+        @media screen  and (max-width: 768px) {
+            width: auto;
+        }
+    }
+    &__buy-section{
+        margin-left: 20px;
+    }
     &__size{
         margin-bottom: 50px;
         font-size: 25px;
+        @media screen and (max-width: 768px) {
+
+        }
     }
     &__sidebar{
         flex: 0 0 auto;
         width: 150px;
+        @media screen and (max-width: 768px) {
+           display: flex;
+            gap: 0px 17px;
+        }
     }
     &__side-img{
         width: 140px;
@@ -16,6 +37,9 @@
         margin-bottom: 10px;
         border-radius: 30px;
         border: 1px solid $second-color;
+        @media screen and (max-width: 768px) {
+
+        }
     }
     &__size-label{
         align-items: center;
@@ -58,6 +82,11 @@
     &__footer-article{
         font-weight: bold;
         margin-bottom: 20px;
+    }
+    &__button-buy{
+        @media screen and (max-width: 768px) {
+            text-align: center;
+        }
     }
     h2{
         font-size: 55px;
