--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -3,11 +3,18 @@
     margin: 5px;
     border-radius: 50px;
     border: 1px solid $second-color;
+    @media screen and (max-width: 768px){
+        border-radius: 5px;
+    }
+
     &:hover{
         border-radius: 50px;
         border: 1px solid $second-color;
         color: $main-color;
         background-color: $second-color;
+        @media screen and (max-width: 768px){
+            border-radius: 5px;
+        }
     }
     &__clear{
         background-color: red;
