Editing categories page

--- a/src/styles/_product_page.scss
+++ b/src/styles/_product_page.scss
@@ -36,7 +36,8 @@
   }
   &__img{
     border-radius: 40px;
-    height: 500px;
+    width: 450px;
+    height: 550px;
     object-fit: cover;
   }
   &__img-wrap{
