Adding pagination service for products

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,7 @@
 @import "mainpage";
 @import "buttons";
 @import "main";
+@import "pagination";
 @import "carousel";
 @import "products";
 @import "product_page";
