Edited checkout page

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -86,6 +86,7 @@
         font-weight: bold;
         padding: 10px;
         border-radius: 5px;
+        margin: 0px;
         &:hover{
             background-color: $main-color;
             color: $second-color;
