--- a/src/styles/_checkout.scss
+++ b/src/styles/_checkout.scss
@@ -3,4 +3,15 @@
     &__input{
         margin: 5px;
     }
+    &__row{
+        display: flex;
+        justify-content: space-around;
+    }
+    &__image{
+        max-width: 200px;
+        max-height: 200px;
+    }
+    &__item{
+        margin-bottom: 60px;
+    }
 }
