--- a/src/styles/_product_page.scss
+++ b/src/styles/_product_page.scss
@@ -61,6 +61,7 @@
     justify-content: center;
     display: flex;
     margin-bottom: 20px;
+    gap: 10px;
   }
   &__filter-item{
     cursor: pointer;
