Edited category page

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -3,4 +3,9 @@
   &__header{
     text-align: center;
   }
+  &__content{
+    font-size: 20px;
+    padding: 20px 115px;
+    line-height: 50px;
+  }
 }
