--- a/src/styles/_checkout.scss
+++ b/src/styles/_checkout.scss
@@ -14,4 +14,8 @@
     &__item{
         margin-bottom: 60px;
     }
+    &__textarea{
+        min-width: 400px;
+        min-height: 100px;
+    }
 }
