--- a/src/styles/_mainpage.scss
+++ b/src/styles/_mainpage.scss
@@ -14,11 +14,9 @@
     transform: translate(0%, -50%);
     text-align: left;
     h1{
-      font-size: 170px;
+      font-size: 10vw;
       color: white;
-      @media screen and (max-width: 768px) {
-        font-size: xx-large;
-      }
+
     }
   }
 }
